[tool.poetry]
name = "imu"
version = "0.1.0"
description = "To visualise IMU data and orientation for interpretation"
authors = ["Rehann J <rehannj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.1"
pytest = "^6.2.4"
pyserial = "^3.5"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
